--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
   </head>
   <body>
     <div class="card">
-      <img src="my-profile-picture.png" alt="Girlcoder" style="width: 100%" />
-      <h1>Zandile Doe</h1>
-      <p class="title">Software developer</p>
-      <p>Girlcode Bootcamp</p>
+      <img src="Nothemba Hlongwa.png" alt="Nothemba Hlongwa" style="width: 100%" />
+      <h1>Nothemba Hlongwa</h1>
+      <p class="title">Software Development Engineering Student</p>
+      <p>Girlcode Learnership</p>
       <div style="margin: 24px 0">
-        <a href="https://twitter.com/GirlCode_za"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/company/girlcodeza"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com/GirlCodeZA"><i class="fa fa-github"></i></a>
+        <a href="https://www.instagram.com/nothemba_h/"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nothemba-hlongwa-5bb527182/"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/nothembah"><i class="fa fa-github"></i></a>
       </div>
       <p>
-        <a href="mailto:girlcode@gmail.com"><button>Contact</button></a>
+        <a href="nothemba.t.h@gmail.com"><button>Contact</button></a>
       </p>
     </div>
   </body>
