--- a/yearbook.html
+++ b/yearbook.html
@@ -70,7 +70,7 @@
       </a>
         <a href="https://tonym59.github.io//" target="_blank">
           <figure>
-            <img src="my-profile-picture.png" alt="Tony Mahlangu" />
+            <img src="Tony.jpg" alt="Tony Mahlangu" />
             <figcaption>Tony</figcaption>
           </figure>
       </a>
