--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <div class="card">
-      <img src="my-profile-picture.png" alt="Girlcoder" style="width: 100%" />
+      <img src="Tony.jpg" alt="Girlcoder" style="width: 100%" />
       <h1>Zandile Doe</h1>
       <p class="title">Software developer</p>
       <p>Girlcode Bootcamp</p>
