--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
   </head>
   <body>
     <div class="card">
-      <img src="/my-profile-picture.jpg" alt="Mita" style="width: 100%" />
+      <img src="/my-profile-picture.png" alt="Mita" style="width: 100%" />
       <h1>Mita Raboya</h1>
       <p class="title">Software developer</p>
       <p>Girlcode Learnership</p>
       <div style="margin: 24px 0">
         <a href="https://twitter.com/Mita_Raboya"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/Mita-cpu"><i class="fa fa-github"></i></a>
       </div>
       <p>
         <a href="mailto:mitaraboya@gmail.com@gmail.com"><button>Contact</button></a>
