--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   </head>
   <body>
     <div class="card">
-      <img src="my-profile-picture.png" alt="Girlcoder" style="width: 100%" />
-      <h1>Zandile Doe</h1>
+      <img src="Boipelo.jpg" alt="BoipeloM" style="width: 100%" />
+      <h1>Boipelo Magano</h1>
       <p class="title">Software developer</p>
-      <p>Girlcode Bootcamp</p>
+      <p>GirlCoder</p>
       <div style="margin: 24px 0">
         <a href="https://twitter.com/GirlCode_za"><i class="fa fa-twitter"></i></a>
         <a href="https://www.linkedin.com/company/girlcodeza"><i class="fa fa-linkedin"></i></a>
